--- a/package.json
+++ b/package.json
@@ -1,16 +1,49 @@
 {
-  "name": "om.thapa",
+  "name": "ingo-bff",
   "version": "1.0.0",
-  "description": "",
+  "description": "backend for frontend",
   "main": "index.js",
-  "dependencies": {
-    "express": "^4.17.1",
-    "jshint": "^2.11.0"
-  },
-  "devDependencies": {},
   "scripts": {
+    "dev": "NODE_ENV=development DEBUG=express:* nodemon ./server/index.js",
+    "start": "pm2-runtime start ecosystem.config.js",
+    "stop": "pm2-runtime stop ecosystem.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "om.thapa",
-  "license": "ISC"
+  "dependencies": {
+    "@grpc/proto-loader": "0.5.3",
+    "app-root-path": "3.0.0",
+    "axios": "0.19.0",
+    "axios-retry": "3.1.2",
+    "body-parser": "1.19.0",
+    "compression": "1.7.4",
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "fs": "0.0.1-security",
+    "google-protobuf": "3.11.1",
+    "grpc": "1.24.2",
+    "helmet": "3.21.2",
+    "morgan": "1.9.1",
+    "newrelic": "6.2.0",
+    "path": "0.12.7",
+    "rotating-file-stream": "1.4.6",
+    "uuid": "3.3.3"
+  },
+  "devDependencies": {
+    "husky": "3.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/omvikram/middleware.git"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "node tools/commit-msg.js"
+    }
+  },
+  "author": "Vishal",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/omvikram/middleware/issues"
+  },
+  "homepage": "https://github.com/omvikram/middleware#readme"
 }
